objects/ESC_Survey__c.object
<CustomObject>
    <description>ESC_ An enhanced survey object from the Enterprise Service Cloud project that adds additional fields. Stores the response of the user for the survey sent on case closure through ClickTools.</description>
    <fields>
        <fullName>ESC_Answer_10__c</fullName>
        <label>Answer 10</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Answer_1__c</fullName>
        <label>Answer 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Answer_2__c</fullName>
        <label>Answer 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_CaseNumber__c</fullName>
        <description>Unique field to limit multiple case submission per case</description>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ESC_Case_Team_Static__c</fullName>
        <formula>ESC_Case__r.ESC_Case_Owner_Role_Static__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Team (Static)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>ESC_Surveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Question_10__c</fullName>
        <label>Question 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Question_1__c</fullName>
        <label>Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Question_2__c</fullName>
        <label>Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_SurveyComments__c</fullName>
        <label>Survey Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Aggregate_Score__c</fullName>
        <description>ESC_ This calculates the average of the values in questions 1 to 5, and removing ISBLANK values for the proper average calculation.</description>
        <label>Survey Aggregate Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Comments_Text__c</fullName>
        <description>ESC_Field to hold text of how comments were asked for</description>
        <label>Survey Comments Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Version__c</fullName>
        <label>Survey Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Text_Answer_1__c</fullName>
        <description>ESC_ This field is used to capture the text of a question that is answered in a text instead of a numerical value</description>
        <label>Text Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Text_Question_1__c</fullName>
        <description>ESC_ This field is used to capture the text of a question that is answered in a text instead of a numerical value</description>
        <label>Text Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_1__c</fullName>
        <description>ESC_ Used to store the first Yes / no question. This field is not a checkbox so that we can check for ISBLANK values.</description>
        <label>YNAnswer 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_2__c</fullName>
        <description>ESC_ Used to store the second Yes / no question. This field is not a checkbox so that we can check for ISBLANK values.</description>
        <label>YNAnswer 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_3__c</fullName>
        <label>YNAnswer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_1__c</fullName>
        <label>YNQuestion 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_2__c</fullName>
        <label>YNQuestion 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_3__c</fullName>
        <label>YNQuestion 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLI_Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>